--- a/index.html
+++ b/index.html
@@ -8,46 +8,34 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class='login' id='login'>
-        <form id='login__form' class='login-form'>
-            <h2 class='title'>Start a Game</h2>
+    <div id='start-frame' class='start' >
+        <form id='start-form' class='start-form'>
+            <h2 class='title'>New Game</h2>
             <label for='name'>Name:</label>
             <input type='text' class='input' id='name' autofocus />
-            
-            <div class="login__buttons">
-                <button id='load' type='button' class='btn'>Load</button>
-                <button type='submit' class='btn'>Start</button>
-            </div>
+            <button type='submit' class='btn'>Start</button>
         </form>
     </div>    
-    <div id='end-of-game' class="end-of-game">
-        <form class='end-of-game__form'>
-            <div id='next-level'>
+    <div id='end-of-game-frame' class="end-of-game">
+        <form id='end-of-game-form' class='end-of-game-form'>
+            <!-- <div id='next-level'>
                 <h2 id='win-text' class='title'></h2>
-                <p id='next-level__text' class='big-score'></p>
                 <button type='button' id='next-level-btn' class='btn'>Next Level</button>
-            </div>
-            <div id='lose' class='lose'>
-                <h2 id='lose-text' class='title'></h2>
-                <button id='restart' type='button' class='btn'>Restart</button>
-            </div>
+            </div> -->
+            <h2 id='end-of-game-text' class='title'></h2>
+            <p id='big-score' class='big-score'></p>
+            <button id='restart' type='button' class='btn'>Restart</button>
         </form>
     </div>
     <div class='game-stats'>
         <div>
-            <span>Level: </span><span id='level'>0</span>
-        </div>
-        <div>
             <span>Score: </span><span id='score'>0</span>
-        </div>
-        <div>
-            <span>Life: </span><span id='lifes'>0</span>
         </div>
         <div>
             <span>Record: </span><span id='record'>0</span>
         </div>
     </div>
-    <canvas id='canvas'></canvas>
+    <canvas id='canvas' class='canvas'></canvas>
     <script src="js/levels.js"></script>
     <script src="js/init.js"></script>
     <script src="js/howler.core.js"></script>
